Adding download script
