# api/swagger/swagger.yaml
@@ -20,7 +20,112 @@ produces:
 paths:
   /swagger:
     x-swagger-pipe: swagger_raw
+  /comics:
+    x-swagger-router-controller: comic
+    get:
+      description: Returns all comics
+      operationId: comic_list
+      responses:
+        200:
+          description: JSON array of all comics
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/Comic"
+        500:
+          description: Server error
+          schema:
+            type: object
+    post:
+      description: Create a new comic
+      operationId: comic_create
+      parameters:
+      - name: comic
+        in: body
+        description: JSON representation of the comic to be created
+        required: true
+        schema:
+          $ref: "#/definitions/Comic"
+      responses:
+        201:
+          description: Created
+          schema:
+            $ref: "#/definitions/Comic"
+        400:
+          description: Bad request
+          schema:
+            type: object
+        500:
+          description: Server error
+          schema:
+            type: object
+  /comics/{id}:
+    x-swagger-router-controller: comic
+    get:
+      description: Returns the comic with the requested ID
+      operationId: comic_get
+      parameters:
+      - name: id
+        in: path
+        description: ID of the comic
+        required: true
+        type: integer
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/Comic"
+        404:
+          description: Not found
+          schema:
+            type: object
+        500:
+          description: Server error
+          schema:
+            type: object
+    put:
+      description: Make changes to the given comic
+      operationId: comic_put
+      parameters:
+      - name: id
+        in: path
+        description: ID of the comic
+        required: true
+        type: integer
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/Comic"
+        404:
+          description: Not found
+          schema:
+            type: object
+        500:
+          description: Server error
+          schema:
+            type: object
 # complex objects have schema definitions
 definitions:
-  Example:
-    type: string
+  Comic:
+    properties:
+      id:
+        type: integer
+      title:
+        type: string
+      folder:
+        type: string
+      author:
+        type: string
+      description:
+        type: string
+      start:
+        type: string
+      latest:
+        type: string
+      linkSelector:
+        type: string
+      imgSelector:
+        type: string
+      noteSelector:
+        type: string
